--- a/Consalting_Frontend/public/manifest.json
+++ b/Consalting_Frontend/public/manifest.json
@@ -3,7 +3,7 @@
 {
     "name": "Consalting Frontend",
     "short_name": "Consalting",
-    "start_url": "/consalting_frontend/",
+    "start_url": "//",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#2684E6",
