--- a/Consalting_Frontend/package.json
+++ b/Consalting_Frontend/package.json
@@ -6,6 +6,7 @@
   "proxy": "http://localhost:8000",
   "scripts": {
     "dev": "vite",
+    "tauri": "tauri",
     "lint": "eslint .",
     "build": "vite build",
     "preview": "vite preview",
@@ -20,6 +21,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@tauri-apps/api": "^2.2.0",
+    "@tauri-apps/cli": "^2.2.5",
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
