--- a/Consalting_Frontend/package.json
+++ b/Consalting_Frontend/package.json
@@ -13,10 +13,11 @@
     "generate-api": "node scripts/generate-api.mjs"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.5.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "reactstrap": "^9.2.3"
   },
