--- a/Consalting_Frontend/package.json
+++ b/Consalting_Frontend/package.json
@@ -17,6 +17,8 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
+    "react-input-mask": "^2.0.4",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "reactstrap": "^9.2.3"
