Fix: Full update Disign (404, 403, home, login, register, servs. reqs, header)

--- a/Consalting_Frontend/public/manifest.json
+++ b/Consalting_Frontend/public/manifest.json
@@ -9,7 +9,7 @@
   "theme_color": "#2684E6",
   "screenshots": [
     {
-      "src": "/Consalting_Frontend/screenshot1.jpeg",
+      "src": "/Consalting_Frontend/screenshot1.png",
       "sizes": "1920x1080",
       "type": "image/png",
       "form_factor": "wide"
